[gd_scene load_steps=6 format=1]

[ext_resource path="res://UI/background_ingame.png" type="Texture" id=1]
[ext_resource path="res://scripts/c_switch_image.gd" type="Script" id=2]
[ext_resource path="res://UI/back_button.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]

resource/name = "close"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/size")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 131, 126 ), Vector2( 131, 0 ), Vector2( 131, 125 ) ]
}

[sub_resource type="Animation" id=2]

resource/name = "open"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/size")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 131, 0 ), Vector2( 131, 128 ) ]
}

[node name="Node2D" type="Node2D"]

[node name="background_ingame" type="Sprite" parent="."]

transform/pos = Vector2( 640.31, 299.359 )
transform/scale = Vector2( 0.982068, 1.0205 )
texture = ExtResource( 1 )

[node name="c_jawaban" type="Node2D" parent="."]

script/script = ExtResource( 2 )

[node name="kotak_jawaban" type="Node2D" parent="."]

transform/pos = Vector2( 259, 181 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="kotak1" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 256.0
margin/top = 179.0
margin/right = 387.0
margin/bottom = 304.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 1
params/scale = Vector2( 0.2, 0.2 )
params/stretch_mode = 0

[node name="Label" type="Label" parent="kotak1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 42.0
margin/top = 47.0
margin/right = 82.0
margin/bottom = 61.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="kotak1"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="kotak2" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 404.0
margin/top = 181.0
margin/right = 470.0
margin/bottom = 244.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.2, 0.2 )
params/stretch_mode = 0

[node name="kotak3" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 403.0
margin/top = 321.0
margin/right = 534.0
margin/bottom = 447.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.2, 0.2 )
params/stretch_mode = 0

[node name="kotak4" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 260.0
margin/top = 319.0
margin/right = 326.0
margin/bottom = 382.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
params/resize_mode = 0
params/scale = Vector2( 0.2, 0.2 )
params/stretch_mode = 0

[connection signal="timeout" from="Timer" to="c_jawaban" method="_on_Timer_timeout"]

[connection signal="pressed" from="kotak1" to="c_jawaban" method="_on_kotak1_pressed"]


